Ändrade i index.html filen

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Animate a string</title>
+    <title>Animera en sträng</title>
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"
-      integrity="sha512-NmLkDIU1C/C88wi324HBc+S2kLhi08PN5GDeUVVVC/BVt/9Izdsc9SVeVfA1UZbY3sHUlDSyRXhCzHfr6hmPPw=="
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+      integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer" />
     <link
@@ -20,7 +20,9 @@
     <link rel="stylesheet" href="styles/style.css" />
     <script src="js/rotateString.js"></script>
   </head>
-  <body onload="animate_string('target')"
-  <pre id="target">w3resource </pre>
+  <body onload="animate_string('target')">
+    <h1>Ett program som vänder på en textsträng med hjälp av JavaScript</h1>
+
+    <pre id="target">w3resource </pre>
   </body>
 </html>
