Stylade om rubriken i en ny css mapp

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Chivo" />
-    <link rel="stylesheet" href="styles/style.css" />
+    <link rel="stylesheet" href="css/styles.css" />
     <script src="js/rotateString.js"></script>
   </head>
   <body onload="animate_string('target')">
-    <h1>Ett program som vänder på en textsträng med hjälp av JavaScript</h1>
+    <h1 class="header">Ett program som vänder på en textsträng med hjälp av JavaScript</h1>
 
     <pre id="target">w3resource </pre>
   </body>
