La till footer med copyright text

--- a/index.html
+++ b/index.html
@@ -24,5 +24,7 @@
     <h1 class="header">Ett program som vänder på en textsträng med hjälp av JavaScript</h1>
 
     <pre id="target">w3resource </pre>
+
+    <footer class="footer">Copyright Mr.Andros Inc 2022</footer>
   </body>
 </html>
