Lagt till en sträng till

--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
     <link rel="stylesheet" href="css/styles.css" />
     <script src="js/rotateString.js"></script>
   </head>
-  <body onload="animate_string('target')">
+  <body onload="animate_string('target'); animate_string('target2')">
     <h1 class="header">Ett program som vänder på en textsträng med hjälp av JavaScript</h1>
 
     <pre id="target">w3resource </pre>
+    <pre id="target2">kalinka777 </pre>
 
     <footer class="footer">Copyright Mr.Andros Inc 2022</footer>
   </body>
