--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <script src="js/rotateString.js"></script>
   </head>
   <body onload="animate_string('target'); animate_string('target2')">
-    <h1 class="header">Ett program som vänder på en textsträng med hjälp av JavaScript</h1>
+    <h1 class="header">Ett program som vänder på en textsträng med hjälp av språket JavaScript</h1>
 
     <pre id="target">w3resource </pre>
     <pre id="target2">kalinka777 </pre>
